--- a/style.css
+++ b/style.css
@@ -232,6 +232,12 @@ th {
 
 .benefits-image {
   width: 60%;
+  opacity: 1;
+  transition: 0.3;
+}
+
+.benefits-image:hover {
+  opacity: 0.3;
 }
 
 .map {
@@ -246,4 +252,52 @@ th {
 .video {
   width: 560px;
   margin: 1em auto;
+}
+
+@media (max-width: 480px) {
+  .caixa,
+  .principal,
+  .benefits-content,
+  .map-content,
+  .video {
+    width: auto;
+  }
+  h1 {
+    text-align: center;
+  }
+  nav {
+    position: static;
+  }
+  .benefits-list,
+  .benefits-image {
+    width: 100%;
+  }
+  .produtos {
+    width: 100%;
+  }
+  .produtos li {
+    display: block;
+    margin: 0 auto 20px auto;
+    width: 90%;
+  }
+  .contact {
+    width: 90%;
+    margin: 0 auto;
+  }
+  .input-padrao,
+  textarea,
+  fieldset {
+    width: 100%;
+    box-sizing: border-box;
+    margin: 0 auto 20px auto;
+  }
+  fieldset label {
+    text-align: left;
+  }
+  .enviar {
+    width: 100%;
+  }
+  table {
+    margin: 20px auto 40px auto;
+  }
 }
